--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/mediaQueries.css">
     <title>ECO CARNES</title>
@@ -12,19 +13,19 @@
     <header>
         <nav class="navbarra">
             <img src="./img/logoinicio.png" class="logo" alt="logoinicio">
-                <ul class="inicio">
-                    <li><a href="./index.html"> INICIO</a>
-                    <li><a href="./pages/tienda.html">TIENDA</a></li>
+                <ul class="inicio" >
+                    <li class="animate__animated animate__rubberBand"><a href="./index.html"> INICIO</a>
+                    <li class="animate__animated animate__rubberBand"><a href="./pages/tienda.html">TIENDA</a></li>
                 </ul>
         </nav>
     </header>
 
     <main class="menu">
         <div class="info">
-            <h3> ECO </h3>
-            <h1>CARNES</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, animi! Quam a molestiae corporis mollitia, quis architecto in qui iusto.</p>
-            <ul class="vamosalatienda">
+            <h3 class="animate__animated animate__backInRight"> ECO </h3>
+            <h1 class="animate__animated animate__backInRight">CARNES</h1>
+            <p class="animate__animated animate__backInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, animi! Quam a molestiae corporis mollitia, quis architecto in qui iusto.</p>
+            <ul class="vamosalatienda" >
                 <li><a href="./pages/tienda.html">VAMOS A LA TIENDA</a></li>
             </ul>
         </div>
@@ -32,12 +33,12 @@
     <footer class="footer">
 
         <div class="horarios">
-            <h2>LUNES A VIERNES 8:00 A 20:00</h2>
-            <h2>SABADOS 8:00 A 13:00</h2>
+            <h2 class="animate__animated animate__zoomIn">LUNES A VIERNES 8:00 A 20:00</h2>
+            <h2 class="animate__animated animate__zoomIn">SABADOS 8:00 A 13:00</h2>
         </div>
 
-        <div class="seguinos">
-            <h2>SEGUINOS</h2>
+        <div class="seguinos" >
+            <h2 class="animate__animated animate__zoomIn">SEGUINOS</h2>
         </div>
         
         <div class="redessociales">
