--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/mediaQueries.css">
     <title>TIENDA</title>
@@ -14,8 +15,8 @@
         <nav class="navbarra">
             <img src="../img/logoinicio.png" class="logo" alt="logoinicio">
                 <ul class="inicio">
-                    <li><a href="../index.html"> INICIO</a>
-                    <li><a href="../pages/tienda.html">TIENDA</a></li>
+                    <li class="animate__animated animate__rubberBand"><a href="../index.html"> INICIO</a>
+                    <li class="animate__animated animate__rubberBand"><a href="../pages/tienda.html">TIENDA</a></li>
                 </ul>
         </nav>
     </header>
@@ -23,7 +24,7 @@
     <main class="menutienda">
 
         <div class="cortes">
-            <h1>CORTES</h1>
+            <h1 class="animate__animated animate__rollIn" animate__animated >CORTES</h1>
         </div>
 
         <div class="fondocortes">
@@ -32,14 +33,14 @@
             
         
         <div class="mayorista">
-            <h1>MAYORISTAS</h1>
+            <h1 class="animate__animated animate__rollIn">MAYORISTAS</h1>
         </div>
         <div class="fondomayorista">
             <img src="../img/mayorista.png" alt="mayorista" class="fondomayorista">
         </div>
 
         <div class="ofertas">
-            <h1>OFERTAS</h1>
+            <h1 class="animate__animated animate__rollIn">OFERTAS</h1>
         </div>
         <div class="fondoofertas">
             <img src="../img/ofertas.png" alt="ofertas" class="fondoofertas" >
@@ -49,14 +50,14 @@
 
     <footer class="footer">
         <div class="horarios">
-            <h2>LUNES A VIERNES 8:00 A 20:00</h2>
-            <h2>SABADOS 8:00 A 13:00</h2>
+            <h2 class="animate__animated animate__zoomIn">LUNES A VIERNES 8:00 A 20:00</h2>
+            <h2 class="animate__animated animate__zoomIn">SABADOS 8:00 A 13:00</h2>
         </div>
         <div class="seguinos">
-            <h2>SEGUINOS</h2>
+            <h2 class="animate__animated animate__zoomIn">SEGUINOS</h2>
         </div>
         <div class="redessociales">
-            <img src="../img/facebook.png" alt="facebook" class="facebook">
+            <img src="../img/facebook.png" alt="facebook" class="facebook" >
             <img src="../img/instagram.png" alt="instagram" class="instagram">
         </div>
     </footer>
